# pdf_dashboard

./: README.md
pdf_etl/dbt_dashboard_aovivo/: README.md  pyproject.toml
pdf_etl/dbt_dashboard_aovivo/dbt/: dbt_project.yml
pdf_etl/dbt_dashboard_aovivo/dbt/models/: sources.yml
pdf_etl/dbt_dashboard_aovivo/dbt/models/bronze/jornada/: bronze_fatura_jornada.sql  bronze_fatura_jornada_small.sql
pdf_etl/dbt_dashboard_aovivo/dbt/models/bronze/redrex/: bronze_fatura_redrex.sql  bronze_fatura_redrex_small.sql
pdf_etl/dbt_dashboard_aovivo/dbt/models/gold/: gold_fatura.sql
pdf_etl/dbt_dashboard_aovivo/dbt/models/silver/jornada/: silver_fatura_jornada.sql
pdf_etl/pdf-extractor/: README.md  pyproject.toml
pdf_etl/pdf-extractor/src/: start.py
pdf_etl/pdf-extractor/src/files/csv/: Redrex - Fatura (1).csv  Redrex - Fatura (1)_small.csv  Redrex - Fatura (10).csv  Redrex - Fatura (10)_small.csv  Redrex - Fatura (11).csv  Redrex - Fatura (11)_small.csv  Redrex - Fatura (12).csv  Redrex - Fatura (12)_small.csv  Redrex - Fatura (13).csv  Redrex - Fatura (13)_small.csv  Redrex - Fatura (14).csv  Redrex - Fatura (14)_small.csv  Redrex - Fatura (15).csv  Redrex - Fatura (15)_small.csv  Redrex - Fatura (16).csv  Redrex - Fatura (16)_small.csv  Redrex - Fatura (17).csv  Redrex - Fatura (17)_small.csv  Redrex - Fatura (18).csv  Redrex - Fatura (18)_small.csv  Redrex - Fatura (19).csv  Redrex - Fatura (19)_small.csv  Redrex - Fatura (2).csv  Redrex - Fatura (2)_small.csv  Redrex - Fatura (20).csv  Redrex - Fatura (20)_small.csv  Redrex - Fatura (21).csv  Redrex - Fatura (22).csv  (+92 more)
