[tool.poetry]
name = "dbt-dashboard-aovivo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.5"
dbt-postgres = "^1.8.2"
streamlit = "^1.37.1"
python-dotenv = "^1.0.1"
dbt = "^1.0.0.38.11"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"
altair = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
